# kata_tdd_pytest

./: .bandit  .coveragerc  .gitignore  README.md  how_to_markers.md  pyproject.toml  pytest.ini  raizEcuacionSegundoGrado.py  requirements.in  requirements.txt  setup.py  setup_old.py  tox.ini
config_precommit/: .pre-commit-config.yaml
src/: blame.py  raizEcuacionSegundoGrado.py
test/: instalation_pytest.txt  test_ square_root.py  test_b_c_nulo.py  test_b_nulo.py  test_c_nulo.py  test_division_cero.py  test_raiz_imaginaria.py
